--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
+    "angular-datatables": "^19.0.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
+    "datatables.net": "^2.3.0",
+    "datatables.net-bs5": "^2.3.0",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -31,8 +35,10 @@
     "@angular-devkit/build-angular": "^19.2.9",
     "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/datatables.net": "^1.10.28",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
